# dnpsoup

./: '  .clang_complete  .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .ycm_extra_conf.py  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.manjaro  Dockerfile.ubuntu  LICENSE  README.md  README.md.gitlab  bitbucket-pipelines.yml  c_cpp_properties.json  configure_dnpsoup.h.in  debug_dnpsoup.sh  emcc_build.sh  normal_build.sh  plot_result.sh  plot_results.py  quick_run.sh  run_dnpsoup_and_plot.sh  run_docker.sh  take_one_input.sh
.circleci/: config.yml
.github/workflows/: cmake.yml
cmake/: CodeCoverage.cmake  googletest-download.cmake  googletest.cmake
dnpsoup_cli/: CMakeLists.txt  engine.cpp  engine.h  engine_impl.cpp  engine_impl.h  main.cpp
dnpsoup_impl/: CMakeLists.txt
dnpsoup_impl/include/: CMakeLists.txt  common.h  constants.h  dnpsoup.h  dnpsoup_api.h  errors.h
dnpsoup_impl/include/dnpsoup_core/: common.h  constants.h  errors.h
dnpsoup_impl/include/dnpsoup_core/experiment/: DnpRunner.h  NmrRunner.h  experiment_types.h  hardware.h
dnpsoup_impl/include/dnpsoup_core/experiment/dnp/: scan.h
dnpsoup_impl/include/dnpsoup_core/powder/: ZCW.h  fibonacci.h
dnpsoup_impl/include/dnpsoup_core/pulseseq/: ChirpPulse.h  Delay.h  EMRadiation.h  Pulse.h  PulseComponent.h  PulsePacket.h  PulseSeq.h  PulseSequence.h  Section.h  Segment.h  SequenceInterface.h  SubSequenceInterface.h  pulse_sequence.h  seq_common.h
dnpsoup_impl/include/dnpsoup_core/pulseseq/deprecated/: PulseComponent.h  PulseInterface.h
dnpsoup_impl/include/dnpsoup_core/spin_physics_components/: EvolutionCache.h  EvolutionCacheStatic.h  MasterEqTerms.h  evolve.h  relaxation.h  spin.h  super_op.h
dnpsoup_impl/include/dnpsoup_core/spin_physics_components/hamiltonian/: InteractionInterface.h  Property.h  PropertyValue.h  PropertyValueInterface.h  irreducible_tensor_op.h  rho0.h  rho_eq.h
dnpsoup_impl/include/dnpsoup_core/spin_physics_components/hamiltonian/interactions/: AcquisitionInteraction.h  AcquisitionInteractionImpl.hpp  ChemicalShiftInteraction.h  ChemicalShiftInteractionImpl.hpp  DipolarInteraction.h  DipolarInteractionImpl.hpp  EMInteraction.h  EMInteractionImpl.hpp  OffsetInteraction.h  ScalarInteraction.h  ScalarInteractionImpl.hpp  ShieldingInteraction.h  ShieldingInteractionImpl.hpp  Shift.h  ShiftZ.h  WaveInteraction.h  WaveInteractionImpl.hpp  interaction_types.h  interactions.h
dnpsoup_impl/include/dnpsoup_core/spin_physics_components/hamiltonian/properties/: ChemicalShiftAnisotropyValue.h
dnpsoup_impl/include/dnpsoup_core/spin_physics_components/rotation/: Coordinate.h  Euler.h  EulerImpl.hpp  FrameType.h  Quaternion.h  QuaternionImpl.hpp  RotationType.h
dnpsoup_impl/include/dnpsoup_core/spinsys/: HamiltonianPacket.h  Observable.h  README.md  RelaxationPacket.h  SimulationPacket.h  SpinEntity.h  SpinId.h  SpinPacket.h  SpinSys.h  SpinSysImpl.hpp
dnpsoup_impl/include/lean/: taskqueue.h  threadpool.h  threadpool_impl.hpp
dnpsoup_impl/include/spin_physics_components/: spin.h  spin_impl.hpp
dnpsoup_impl/include/spin_physics_components/hamiltonian/: DipolarInteraction.h  Shift.h  ShiftZ.h  irreducible_tensor_op.h  irreducible_tensor_op_impl.hpp  spin.h  spin_impl.hpp
dnpsoup_impl/src/: CMakeLists.txt  common.cpp  dnpsoup_api.cpp
dnpsoup_impl/src/experiment/: DnpRunner.cpp  hardware.cpp
dnpsoup_impl/src/experiment/dnp/: scan.cpp
dnpsoup_impl/src/powder/: ZCW.cpp
dnpsoup_impl/src/pulseseq/: ChirpPulse.cpp  Delay.cpp  EMRadiation.cpp  Pulse.cpp  PulseComponent.cpp  PulsePacket.cpp  PulseSeq.cpp  PulseSequence.cpp  Section.cpp  Segment.cpp  SubSequenceInterface.cpp  seq_common.cpp
dnpsoup_impl/src/spin_physics_components/: EvolutionCache.cpp  EvolutionCacheStatic.cpp  MasterEqTerms.cpp  evolve.cpp  relaxation.cpp  spin.cpp
dnpsoup_impl/src/spin_physics_components/hamiltonian/: Property.cpp  PropertyValue.cpp  Shift.cpp  rho0.cpp  rho_eq.cpp
dnpsoup_impl/src/spin_physics_components/hamiltonian/interactions/: ChemicalShiftInteraction.cpp  DipolarInteraction.cpp  OffsetInteraction.cpp  ScalarInteraction.cpp  Shift.cpp
dnpsoup_impl/src/spin_physics_components/hamiltonian/properties/: ChemicalShiftAnisotropyValue.cpp
dnpsoup_impl/src/spin_physics_components/rotation/: Coordinate.cpp  Euler.cpp  Quaternion.cpp
dnpsoup_impl/src/spinsys/: HamiltonianPacket.cpp  Observable.cpp  RelaxationPacket.cpp  SimulationPacket.cpp  SpinEntity.cpp  SpinId.cpp  SpinPacket.cpp  SpinSys.cpp
examples/: BDPA_eH_NOVEL_xband_zcw144_em_fp.json  BDPA_spinsys.json  TOTAPOL_eeH_cw_400MHz_buildup.json  TOTAPOL_eeH_cw_400MHz_eigenvals.json  TOTAPOL_eeH_cw_400MHz_fp.json  cw_pulse.json  hardware.json  trityl_ox063_cw_w_band_buildup.json  trityl_ox063_cw_w_band_fp.json
examples/01_solid_effect_and_overhauser_effect/: se_oe_visualization.ipynb
examples/02_cross_effect/: ce_visualization.ipynb
examples/03_novel/: NOVEL_visualization.ipynb
examples/04_off_resonance_novel/: OffresNOVEL_visualization.ipynb
examples/05_ise_sse/: ISE_SSE_visualization.ipynb
examples/06_top_dnp/: top_dnp_visualization.ipynb  top_dnp_xband_experimental.csv
examples/CW_CrossEffect/: TOTAPOL_400MHz_buildup_xtal_9p393T_inc10ns.json  TOTAPOL_400MHz_buildup_xtal_9p393T_inc1ns.json  TOTAPOL_400MHz_buildup_xtal_9p393T_inc1us.json  TOTAPOL_400MHz_buildup_xtal_9p393T_inc20ns.json  TOTAPOL_400MHz_buildup_xtal_9p393T_inc50ns.json
prototype/: Master Equation Solid Effect.ipynb
py_scripts/: CE_eeH_coordinate.ipynb  TEMPO_structure.ipynb  calc_field.py  calc_freq.py  coupling_strengths.ipynb  log2int.py  random_points_on_sphere.ipynb  run_dnpsoup_and_plot.py  tempo_2006285.mol
tests/: CMakeLists.txt  testSpinComponents.cpp  test_BDPA.cpp  test_ZCW.cpp  test_common.cpp  test_coordinate.cpp  test_dipolar_interaction.cpp  test_dnp_runner.cpp  test_em_interaction.cpp  test_euler.cpp  test_evolve.cpp  test_finobacci.cpp  test_hamiltonian_packets.cpp  test_irreducible_tensors.cpp  test_projection.cpp  test_pulseseq.cpp  test_rhoEq.cpp  test_sim_packets.cpp  test_spinsys.cpp  test_superop.cpp
(+9226 files in other folders)
